# aloh-networking

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Makefile  callbacks.go  config.go  connetions.go  docker-compose.yaml  event.go  fetchers.go  go.mod  go.sum  libnetworking.def  libnetworking.h  networking.go  senders.go
cmd/api/: main.go
cmd/app/: main.go
cmd/c-api/: main.go
config/: config.go  config.yaml
configs/app/: config.yaml
internal/app/: app.go
internal/client/: helper.go  protocol.go  signaling-client.go
internal/config/: config.go
internal/domain/e2ee/: e2ee.go  secure-datagram.go  secure-stream.go
internal/domain/models/: session.go
internal/domain/repository/: session-repo.go
internal/domain/services/: network-serv.go  wrapper.go
internal/domain/services/mediatransfer/: mediatransfer.go
internal/domain/services/networking/: handlers.go  helpers.go  network-serv.go  protocol.go  secure-datagram.go  secure-stream.go  utils.go  wrapper.go
internal/handlers/: errs.go  networking-handler.go
internal/p2p/: peer.go  storage.go  wrapper.go
internal/protocol/: errs.go  protocol.go
internal/signaling/: protocol.go
internal/utils/: utils.go
pkg/errs/: errs.go
pkg/errs/app/: app-errs.go
pkg/errs/handlers/: handlers-errs.go
pkg/logger/: logger.go  sparce-logger.go
